# Audio-player

./: Cargo.toml  README.md
src/: main.rs  theme.rs  visualizer.rs  widgets.rs
